tests/rosetta/out/Haskell/abstract-type.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/abstract-type.hs:38:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/abstract-type.hs:30:1
                 /workspace/mochi/tests/rosetta/out/Haskell/abstract-type.hs:38:1
   |
38 | main = do
   | ^^^^
